--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,7 +1,9 @@
+html,
 body {
 	margin: 0;
 	display: flex;
 	place-items: center;
 	min-width: 320px;
 	min-height: 100svh;
+	overscroll-behavior: none;
 }
